14-gateway-api/AGC-nginx/nginx1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              echo '<h1>NGINX 1</h1><p>Traffic reached nginx-1</p>' > /usr/share/nginx/html/index.html
              nginx -g 'daemon off;'
