14-gateway-api/AGC-nginx/svc-nginx1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
  
spec:
  selector:
    app: nginx-1
  ports:
    - port: 80
      targetPort: 80
