14-gateway-api/AGC-nginx/svc-nginx2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-2
  
spec:
  selector:
    app: nginx-2
  ports:
    - port: 80
      targetPort: 80
