14-gateway-api/AGC-nginx/nginx-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agc-gateway
  namespace: agc-demo
  annotations:
    alb.networking.azure.io/alb-namespace: agc-demo
    alb.networking.azure.io/alb-name: agc-demo
spec:
  gatewayClassName: azure-alb-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
