14-gateway-api/AGC-nginx/nginx2-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx2-route
  namespace: agc-demo

spec:
  parentRefs:
    - name: agc-gateway

  hostnames:
    - nginx2.theakkc.space

  rules:
    - backendRefs:
        - name: nginx-2
          port: 80
